button id addded

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="home" class="flex-column"></div>
         <h1>Nikes, cameras, action! Are you ready to play?</h1>
         <a href="/game.html" class="btn">Play</a>
-        <a href="/highscores.html" class="btn">Highscores</a>
+        <a href="/highscores.html" id="highscores-btn" class="btn">Highscores</a>
 
     </div>
     
