--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="home" class="flex-column"></div>
+        <div id="home" class="flex-column flex-centre"></div>
         <h1>Nikes, cameras, action! Are you ready to play?</h1>
         <a href="/game.html" class="btn">Play</a>
         <a href="/highscores.html" id="highscores-btn" class="btn">Highscores</a>
