--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div id="home" class="flex-column flex-centre"></div>
-        <h1>Nikes, cameras, action! Are you ready to play?</h1>
-        <a href="/game.html" class="btn">Play</a>
-        <a href="/highscores.html" id="highscores-btn" class="btn">Highscores</a>
 
+    <div class="container">
+        <div id="home" class="flex-column flex-centre">
+            <h1>Nikes, cameras, action! Are you ready to play?</h1>
+            
+<!--Main Game Menu Buttons-->        
+            <a href="/game.html" class="btn">Play</a>
+            <a href="/highscores.html" id="highscores-btn" class="btn">Highscores</a>
+
+        </div>
     </div>
     
 </body>
