css styling for menu buttons

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Test Your Nike Knowledge!</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
+<!--Main Game Homescreen-->
     <div class="container">
         <div id="home" class="flex-column flex-centre">
             <h1>Nikes, cameras, action! Are you ready to play?</h1>
-            
+
 <!--Main Game Menu Buttons-->        
             <a href="/game.html" class="btn">Play</a>
             <a href="/highscores.html" id="highscores-btn" class="btn">Highscores</a>
