--- a/game.html
+++ b/game.html
@@ -11,7 +11,9 @@
 
 <body>
     <div class="container">
-        <div id="game" class="justify-content flex-column"></div>
+        <div id="game" class="justify-content flex-column">
+            <div id="game-display"></div>
+        </div>
     </div>
 
     
