--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h1>Nikes, cameras, action! Are you ready to play?</h1>
 
 <!--Main Game Menu Buttons-->        
-            <a href="/game.html" class="btn">Play</a>
-            <a href="/highscores.html" id="highscores-btn" class="btn">Highscores</a>
+            <a href="game.html" class="btn">Play</a>
+            <a href="highscores.html" id="highscores-btn" class="btn">Highscores</a>
 
         </div>
     </div>
