variables added to js game file

--- a/game.html
+++ b/game.html
@@ -32,9 +32,9 @@
                         0
                     </h1>
                 </div>
-                
+
 <!--Question Container-->
-                <div id="question">Who was the duo that founded Nike?</div>
+                <h1 id="question">Who was the duo that founded Nike?</h1>
                 <div class="choice-container">
                     <p class="choice-prefix">A</p>
                     <p class="choice-text" data-number="1">Choice 1</p>
