--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
                 </div>
 
 <!--Question Container-->
-                <h1 id="question">Who was the duo that founded Nike?</h1>
+                <h1 id="question">Who were the duo that founded Nike?</h1>
                 <div class="choice-container">
                     <p class="choice-prefix">A</p>
                     <p class="choice-text" data-number="1">Choice 1</p>
