swoosh logo  asset added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
 <!--Main Game Homescreen-->
+<header id="nike-swoosh">
+    <img src="Assets/Images/nike-swoosh.png" alt="nike swoosh logo">
+</header>
     <div class="container">
         <div id="home" class="flex-column flex-centre">
             <h1>Nikes, cameras, action! Are you ready to play?</h1>
